--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,7 +2,8 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+        <title>{% block title %}Beeriously{% if subtitle is not empty %} - {{ subtitle }}{% endif %}{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
