--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -1,7 +1,11 @@
 {% extends 'base.html.twig' %}
 {% block stylesheets %}
-<link rel="stylesheet" href="{{ asset('build/app.css') }}">
+<link rel="stylesheet" href="{{ asset('build/css/app.css') }}">
 {% endblock %}
 {% block javascripts %}
-<script src="{{ asset('build/app.js') }}"></script>
+<script src="{{ asset('build/js/app.js') }}"></script>
+{% endblock %}
+
+{% block body %}
+    {% block content %}{% endblock %}
 {% endblock %}
