--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,6 +5,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link rel="shortcut icon" href="/assets/img/logo/favicon.png" type="image/png" />
         <title>{% block title %}Beeriously{% if pageTitle is not empty %} - {{ pageTitle }}{% endif %}{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
     </head>
