--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -1,11 +1,55 @@
 {% extends 'base.html.twig' %}
 {% block stylesheets %}
 <link rel="stylesheet" href="{{ asset('build/css/app.css') }}">
+<link rel="stylesheet" href="{{ asset('assets/css/open-sans.css') }}">
 {% endblock %}
 {% block javascripts %}
 <script src="{{ asset('build/js/app.js') }}"></script>
+<script src="{{ asset('assets/js/jquery-left-nav-responsive-mobile-menu.js') }}"></script>
 {% endblock %}
 
 {% block body %}
-    {% block content %}{% endblock %}
+    <div id="beeriously-page-container">
+        <nav class="clearfix">
+            <div class="clearfix">
+                <div id="beeriously-nav-menu-logo">
+                    <a  href="/"><img  src="/assets/img/logo/beeriously-logo-square.png"></a>
+                </div>
+                <button class="btn btn-default"><i class="fa fa-bars"></i> Menu</button>
+            </div>
+            <div id="beeriously-nav-menu" class="beeriously-nav-menu-hidden">
+                <div id="beeriously-nav-menu-app-menu">
+                    <a href="/"{% if activeMenu == 'dashboard' %} class="beeriously-nav-menu-active"{% endif %}><i class="fa fa-fw fa-dashboard"></i> Dashboard<span><i class="fa fa-fw fa-chevron-right"></i></span></a>
+                    <a href="/equipment"{% if activeMenu == 'equipment' %} class="beeriously-nav-menu-active"{% endif %}><img src="/assets/img/brew-kettle/brew-kettle.svg"> Brewing<span><i class="fa fa-fw fa-chevron-right"></i></span></a>
+                    <a href="/recipes"{% if activeMenu == 'recipes' %} class="beeriously-nav-menu-active"{% endif %}><i class="fa fa-fw fa-file-text-o"></i> Recipes<span><i class="fa fa-fw fa-chevron-right"></i></span></a>
+                    <a href="/inventory"{% if activeMenu == 'inventory' %} class="beeriously-nav-menu-active"{% endif %}><i class="fa fa-fw fa-line-chart"></i> Inventory<span><i class="fa fa-fw fa-chevron-right"></i></span></a>
+                    <a href="/purchasing"{% if activeMenu == 'purchasing' %} class="beeriously-nav-menu-active"{% endif %}><i class="fa fa-fw fa-shopping-cart"></i> Shopping List<span><i class="fa fa-fw fa-chevron-right"></i></span></a>
+                    <a href="/equipment"{% if activeMenu == 'equipment' %} class="beeriously-nav-menu-active"{% endif %}><img src="/assets/img/fermentation-tank/fermentation-tank.svg"> Equipment<span><i class="fa fa-fw fa-chevron-right"></i></span></a>
+                    <a href="/calculations"{% if activeMenu == 'calculations' %} class="beeriously-nav-menu-active"{% endif %}><i class="fa fa-fw fa-calculator"></i> Calculations<span><i class="fa fa-fw fa-chevron-right"></i></span></a>
+                    <a href="/water"{% if activeMenu == 'water' %} class="beeriously-nav-menu-active"{% endif %}><i class="fa fa-fw fa-tint"></i> Water<span><i class="fa fa-fw fa-chevron-right"></i></span></a>
+                    <a href="/organization"{% if activeMenu == 'organization' %} class="beeriously-nav-menu-active"{% endif %}><i class="fa fa-fw fa-users"></i> Organization<span><i class="fa fa-fw fa-chevron-right"></i></span></a>
+                </div>
+                <span class="beeriously-nav-menu-separator"></span>
+                <div id="beeriously-nav-menu-profile">
+                    <div id="beeriously-nav-menu-profile-image">
+                     <img src="/assets/img/user/user.png">
+                    </div>
+                    <ul id="beeriously-nav-menu-profile-details">
+                        <li>Andrew Cassell<br>(alc277)</li>
+                        <li><a href="/profile">Profile</a> &bull; <a href="/logout">Logout</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <div id="beeriously-content">
+        {% block content %}{% endblock %}
+        </div>
+    </div>
+    <footer>
+        <p>Beeriously &bull; <i class="fa fa-copyright"></i> Copyright 2017 <a href="https://www.andrewcassell.com">Andrew Cassell</a></p>
+        <p>
+            <a href="https://github.com/cassell/beeriously">GitHub Project</a> &bull; <a href="https://github.com/cassell/beeriously/issues">Issues</a> &bull; <a href="https://github.com/cassell/beeriously/blob/master/README.md">Docs</a> &bull; <a href="https://github.com/cassell/beeriously/blob/master/CREDITS.md">Credits</a>
+        </p>
+
+    </footer>
 {% endblock %}
