--- a/templates/tools/hydrometer-correction-chart.html.twig
+++ b/templates/tools/hydrometer-correction-chart.html.twig
@@ -1,8 +1,8 @@
 {% extends 'layout.html.twig' %}
 {% set pageTitle = 'Hydrometer Temperature Correction' %}
+{% set activeMenu = 'calculations' %}
 
 {% block content %}
-<h1>{{ pageTitle }}</h1>
-<h1><i class="fa fa-thermometer-full"></i></h1>
-<img src="/assets/img/beeriously-logo-square-300.png">
+<h1><i class="fa fa-thermometer-full"></i> {{ pageTitle }}</h1>
+
 {% endblock %}
