--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -19,15 +19,15 @@
             </div>
             <div id="beeriously-nav-menu" class="beeriously-nav-menu-hidden">
                 <div id="beeriously-nav-menu-app-menu">
-                    <a href="/"{% if activeMenu == 'dashboard' %} class="beeriously-nav-menu-active"{% endif %}><i class="fa fa-fw fa-dashboard"></i> Dashboard<span><i class="fa fa-fw fa-chevron-right"></i></span></a>
-                    <a href="/equipment"{% if activeMenu == 'equipment' %} class="beeriously-nav-menu-active"{% endif %}><img src="/assets/img/brew-kettle/brew-kettle.svg"> Brewing<span><i class="fa fa-fw fa-chevron-right"></i></span></a>
-                    <a href="/recipes"{% if activeMenu == 'recipes' %} class="beeriously-nav-menu-active"{% endif %}><i class="fa fa-fw fa-file-text-o"></i> Recipes<span><i class="fa fa-fw fa-chevron-right"></i></span></a>
-                    <a href="/inventory"{% if activeMenu == 'inventory' %} class="beeriously-nav-menu-active"{% endif %}><i class="fa fa-fw fa-line-chart"></i> Inventory<span><i class="fa fa-fw fa-chevron-right"></i></span></a>
-                    <a href="/purchasing"{% if activeMenu == 'purchasing' %} class="beeriously-nav-menu-active"{% endif %}><i class="fa fa-fw fa-shopping-cart"></i> Shopping List<span><i class="fa fa-fw fa-chevron-right"></i></span></a>
-                    <a href="/equipment"{% if activeMenu == 'equipment' %} class="beeriously-nav-menu-active"{% endif %}><img src="/assets/img/fermentation-tank/fermentation-tank.svg"> Equipment<span><i class="fa fa-fw fa-chevron-right"></i></span></a>
-                    <a href="/calculations"{% if activeMenu == 'calculations' %} class="beeriously-nav-menu-active"{% endif %}><i class="fa fa-fw fa-calculator"></i> Calculations<span><i class="fa fa-fw fa-chevron-right"></i></span></a>
-                    <a href="/water"{% if activeMenu == 'water' %} class="beeriously-nav-menu-active"{% endif %}><i class="fa fa-fw fa-tint"></i> Water<span><i class="fa fa-fw fa-chevron-right"></i></span></a>
-                    <a href="/organization"{% if activeMenu == 'organization' %} class="beeriously-nav-menu-active"{% endif %}><i class="fa fa-fw fa-users"></i> Organization<span><i class="fa fa-fw fa-chevron-right"></i></span></a>
+                    <a href="/" class="{% if activeMenu == 'dashboard' %} beeriously-nav-menu-active {% endif %}"><i class="fa fa-fw fa-dashboard"></i> Dashboard<span><i class="fa fa-fw fa-chevron-right"></i></span></a>
+                    {#<a href="/equipment" class="{% if activeMenu == 'equipment' %} beeriously-nav-menu-active {% endif %}"><img src="/assets/img/brew-kettle/brew-kettle.svg"> Brewing<span><i class="fa fa-fw fa-chevron-right"></i></span></a>#}
+                    {#<a href="/recipes" class="{% if activeMenu == 'recipes' %} beeriously-nav-menu-active {% endif %}"><i class="fa fa-fw fa-file-text-o"></i> Recipes<span><i class="fa fa-fw fa-chevron-right"></i></span></a>#}
+                    {#<a href="/inventory" class="{% if activeMenu == 'inventory' %} beeriously-nav-menu-active {% endif %}"><i class="fa fa-fw fa-line-chart"></i> Inventory<span><i class="fa fa-fw fa-chevron-right"></i></span></a>#}
+                    {#<a href="/purchasing" class="{% if activeMenu == 'purchasing' %} beeriously-nav-menu-active {% endif %}"><i class="fa fa-fw fa-shopping-cart"></i> Shopping List<span><i class="fa fa-fw fa-chevron-right"></i></span></a>#}
+                    {#<a href="/equipment" class="{% if activeMenu == 'equipment' %} beeriously-nav-menu-active {% endif %}"><img src="/assets/img/fermentation-tank/fermentation-tank.svg"> Equipment<span><i class="fa fa-fw fa-chevron-right"></i></span></a>#}
+                    <a href="/calculations" class="{% if activeMenu == 'calculations' %} beeriously-nav-menu-active {% endif %}"><i class="fa fa-fw fa-calculator"></i> Calculations<span><i class="fa fa-fw fa-chevron-right"></i></span></a>
+                    {#<a href="/water" class="{% if activeMenu == 'water' %} beeriously-nav-menu-active {% endif %}"><i class="fa fa-fw fa-tint"></i> Water<span><i class="fa fa-fw fa-chevron-right"></i></span></a>#}
+                    {#<a href="/organization" class="{% if activeMenu == 'organization' %} beeriously-nav-menu-active {% endif %}"><i class="fa fa-fw fa-users"></i> Organization<span><i class="fa fa-fw fa-chevron-right"></i></span></a>#}
                 </div>
                 <span class="beeriously-nav-menu-separator"></span>
                 <div id="beeriously-nav-menu-profile">
