Fixed Hydrometer unit test types

--- a/templates/calculations/hydrometer-correction-chart.html.twig
+++ b/templates/calculations/hydrometer-correction-chart.html.twig
@@ -1,4 +1,4 @@
-{% extends 'layout.html.twig' %}
+{% extends 'calculations/layout.html.twig' %}
 {% set pageTitle = 'Hydrometer Temperature Correction' %}
 {% set activeMenu = 'calculations' %}
 
