--- a/templates/user/security/login.html.twig
+++ b/templates/user/security/login.html.twig
@@ -23,14 +23,12 @@
             <div class="form-group">
                 <div>
                     <label for="username">{{ 'security.login.username'|trans({}, 'FOSUserBundle') }}</label>
-                    <a href="{{ path('fos_user_registration_register') }}">{{ 'beeriously.security.register.new_user'|trans }}</a>
                 </div>
                 <input type="text" class="form-control" id="username" name="_username" value="{{ last_username }}" required="required" />
             </div>
             <div class="form-group">
                 <div>
                 <label for="password">{{ 'security.login.password'|trans({}, 'FOSUserBundle') }}</label>
-                    <a href="{{ path('fos_user_resetting_request') }}">{{ 'beeriously.security.forgot.password'|trans }}</a>
                 </div>
                 <input type="password" class="form-control" id="password" name="_password" required="required" />
             </div>
@@ -42,6 +40,12 @@
             </div>
             <button type="submit" class="btn btn-primary" id="_submit" name="_submit">{{ 'security.login.submit'|trans({}, 'FOSUserBundle') }}</button>
         </form>
+
+
+        <div style="margin-top: 3em; border-top:1px solid #000; padding-top: 3em; text-align: center">
+            <p class="beeriously-security-container-help-text">{{ 'beeriously.security.register.need_account'|trans }} <a href="{{ path('fos_user_registration_register') }}">{{ 'beeriously.security.register.new_user'|trans }}</a></p>
+            <p class="beeriously-security-container-help-text">{{ 'beeriously.security.forgot.password'|trans }} <a href="{{ path('fos_user_resetting_request') }}">{{ 'resetting.email.subject'|trans({}, 'FOSUserBundle') }}</a></p>
+        </div>
 
     </div>
 
