--- a/templates/dashboard/dashboard.html.twig
+++ b/templates/dashboard/dashboard.html.twig
@@ -1,5 +1,5 @@
 {% extends 'layout.html.twig' %}
-{% set pageTitle = 'Dashboard' %}
+{% set pageTitle = 'beeriously.dashboard.dashboard'|trans %}
 {% set activeMenu = 'dashboard' %}
 
 {% block content %}
