--- a/templates/user/security/resetting/request.html.twig
+++ b/templates/user/security/resetting/request.html.twig
@@ -9,7 +9,7 @@
         </div>
 
         <div class="clearfix">
-            <a style="float: left" href="{{ path('fos_user_security_login') }}">&lt; Back to Login</a>
+            <a href="{{ path('fos_user_security_login') }}">&lt; {{ 'beeriously.security.back_to_login'|trans }}</a>
         </div>
 
         <h1>{{ 'resetting.email.subject'|trans({}, 'FOSUserBundle') }}</h1>
