--- a/templates/user/security/register/register.html.twig
+++ b/templates/user/security/register/register.html.twig
@@ -9,56 +9,41 @@
         </div>
 
         <div class="clearfix">
-            <a style="float: left" href="{{ path('fos_user_security_login') }}">&lt; Back to Login</a>
+            <a href="{{ path('fos_user_security_login') }}">&lt; {{ 'beeriously.security.back_to_login'|trans }}</a>
         </div>
 
         <h1>{{ 'beeriously.security.register.new_user'|trans }}</h1>
 
-        {#<form action="{{ path('fos_user_registration_register') }}" method="POST" class="fos_user_resetting_request">#}
-            {#<div class="form-group">#}
-                {#<div>#}
-                    {#<label for="username">{{ 'resetting.request.username'|trans({}, 'FOSUserBundle') }}</label>#}
-                {#</div>#}
-                {#<input type="text" class="form-control" id="username" name="username" required="required"/>#}
-            {#</div>#}
-            {#<button type="submit" class="btn btn-primary" id="_submit" name="_submit">{{ 'registration.submit'|trans({}, 'FOSUserBundle') }}</button>#}
-        {#</form>#}
-
+        {% form_theme form 'user/security/register/register-form-theme.html.twig' %}
         {{ form_start(form, {'method': 'post', 'action': path('fos_user_registration_register'), 'attr': {'class': 'fos_user_registration_register'}}) }}
         {{ form_widget(form) }}
+        <div class="form-group">
+            <div>
+                <label for="firstName">{{ 'beeriously.security.register.first_name'|trans }}</label>
+            </div>
+            <input type="text" class="form-control" id="firstName" name="_firstName" value="" required="required" />
+        </div>
+        <div class="form-group">
+            <div>
+                <label for="lastName">{{ 'beeriously.security.register.last_name'|trans }}</label>
+            </div>
+            <input type="text" class="form-control" id="lastName" name="_lastName" value="" required="required" />
+        </div>
+        <div class="form-group">
+            <div>
+                <label for="units">{{ 'beeriously.security.register.units'|trans }}</label>
+            </div>
+            <select class="form-control" id="units" name="_units">
+                {% for id,description in units %}
+                <option value="{{ id }}">{{ description | trans }}</option>
+                {% endfor %}
+            </select>
+        </div>
+        <br>
         <div>
-            <input type="submit" value="{{ 'registration.submit'|trans({}, 'FOSUserBundle') }}" />
+            <input class="btn btn-primary" type="submit" value="{{ 'registration.submit'|trans({}, 'FOSUserBundle') }}" />
         </div>
         {{ form_end(form) }}
-
-        {#<form name="fos_user_registration_form" method="post" action="/register/"#}
-              {#class="fos_user_registration_register">#}
-            {#<div id="fos_user_registration_form">#}
-                {#<div><label for="fos_user_registration_form_email" class="required">Email</label><input type="email"#}
-                                                                                                        {#id="fos_user_registration_form_email"#}
-                                                                                                        {#name="fos_user_registration_form[email]"#}
-                                                                                                        {#required="required">#}
-                {#</div>#}
-                {#<div><label for="fos_user_registration_form_username" class="required">Username</label><input#}
-                            {#type="text" id="fos_user_registration_form_username"#}
-                            {#name="fos_user_registration_form[username]" required="required" maxlength="180"#}
-                            {#pattern=".{2,}"></div>#}
-                {#<div><label for="fos_user_registration_form_plainPassword_first" class="required">Password</label><input#}
-                            {#type="password" id="fos_user_registration_form_plainPassword_first"#}
-                            {#name="fos_user_registration_form[plainPassword][first]" required="required"></div>#}
-                {#<div><label for="fos_user_registration_form_plainPassword_second" class="required">Repeat#}
-                        {#password</label><input type="password" id="fos_user_registration_form_plainPassword_second"#}
-                                               {#name="fos_user_registration_form[plainPassword][second]"#}
-                                               {#required="required"></div>#}
-                {#<input type="hidden" id="fos_user_registration_form__token" name="fos_user_registration_form[_token]"#}
-                       {#value="KHnpN3Dul6RjQ3FO3Ab7Y_EPLD3AWsWkeahUahMhq5k">#}
-            {#</div>#}
-            {#<div>#}
-                {#<input type="submit" value="Register">#}
-            {#</div>#}
-
-        {#</form>#}
-
 
     </div>
 {% endblock fos_user_content %}
