--- a/templates/user/security/layout.html.twig
+++ b/templates/user/security/layout.html.twig
@@ -1,8 +1,4 @@
-{% extends 'base.html.twig' %}
-{% block stylesheets %}
-    <link rel="stylesheet" href="{{ asset('build/css/app.css') }}">
-    <link rel="stylesheet" href="{{ asset('assets/css/open-sans.css') }}">
-{% endblock %}
+{% extends 'user/external/layout.html.twig' %}
 {% block body %}
 
     {#{% if app.request.hasPreviousSession %}#}
