--- a/templates/user/security/login.html.twig
+++ b/templates/user/security/login.html.twig
@@ -41,10 +41,10 @@
             <button type="submit" class="btn btn-primary" id="_submit" name="_submit">{{ 'security.login.submit'|trans({}, 'FOSUserBundle') }}</button>
         </form>
 
-
         <div style="margin-top: 3em; border-top:1px solid #000; padding-top: 3em; text-align: center">
             <p class="beeriously-security-container-help-text">{{ 'beeriously.security.register.need_account'|trans }} <a href="{{ path('fos_user_registration_register') }}">{{ 'beeriously.security.register.new_user'|trans }}</a></p>
             <p class="beeriously-security-container-help-text">{{ 'beeriously.security.forgot.password'|trans }} <a href="{{ path('fos_user_resetting_request') }}">{{ 'resetting.email.subject'|trans({}, 'FOSUserBundle') }}</a></p>
+            <p class="beeriously-security-container-help-text">{{ 'beeriously.security.register.switch_language'|trans }} <a href="{{ path('beeriously_choose_language') }}">{{ 'beeriously.security.register.choose_a_different_langauge'|trans({}, null,'en') }}</a>  🇺🇸🇬🇧🇩🇪</p>
         </div>
 
     </div>
