--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -242,10 +242,21 @@ footer {
   }
 
   #beeriously-security-footer {
+
     margin-top: 3em;
     border-top: 5px dashed darken($footerBackgroundColor, 10%);
-    padding-top: 3em;
-    text-align: center
+    text-align: center;
+
+    ul {
+      list-style: none;
+      margin: 0;
+      padding: 1em 0 0 0;
+
+      li {
+        display: inline-block;
+      }
+
+    }
   }
 
   h1 {
