--- a/templates/bundles/FOSUserBundle/layout.html.twig
+++ b/templates/bundles/FOSUserBundle/layout.html.twig
@@ -7,7 +7,7 @@
         {% block fos_user_content %}{% endblock %}
         <div id="beeriously-security-footer">
             <ul>
-                <li><a href="{{ path('fos_user_registration_register') }}">{{ 'beeriously.security.register.new_user'|trans }}</a></li>
+                <li><a href="{{ path('fos_user_registration_register') }}">{{ 'beeriously.security.register.need_account'|trans }}</a></li>
                 <li>&bull;</li>
                 <li><a href="{{ path('fos_user_resetting_request') }}">{{ 'beeriously.security.forgot.password'|trans }}</a></li>
             </ul>
