Add message that more is customizable on profile page. Fixes #23

--- a/templates/bundles/FOSUserBundle/Registration/register_content.html.twig
+++ b/templates/bundles/FOSUserBundle/Registration/register_content.html.twig
@@ -5,3 +5,7 @@
     <input class="btn btn-primary" type="submit" value="{{ 'registration.submit'|trans }}" />
 </div>
 {{ form_end(form) }}
+<div class="text-muted" style="border: 1px solid black; padding: 1rem; margin-top: 2rem">
+    <i class="fa fa-fw fa-4x fa-info-circle" style="float:left; display: block;"></i>
+    <span>{{ 'beeriously.security.register.more_settings'|trans({},'messages') }}</span>
+</div>
