--- a/templates/bundles/FOSUserBundle/layout.html.twig
+++ b/templates/bundles/FOSUserBundle/layout.html.twig
@@ -5,6 +5,7 @@
             <img  src="/assets/img/logo/beeriously-logo-square.png">
         </div>
         {% block fos_user_content %}{% endblock %}
+        {% block footer %}
         <div id="beeriously-security-footer">
             <ul>
                 <li><a href="{{ path('fos_user_registration_register') }}">{{ 'beeriously.security.register.need_account'|trans }}</a></li>
@@ -15,5 +16,6 @@
                 <li><a href="{{ path('beeriously_choose_language') }}">{{ 'beeriously.security.register.switch_language'|trans }} (🇺🇸🇬🇧🇩🇪)</a></li>
             </ul>
         </div>
+        {% endblock %}
     </div>
 {% endblock %}
