Behat tests running in docker. Simple registration app layer tests.

--- a/templates/bundles/FOSUserBundle/Registration/register_content.html.twig
+++ b/templates/bundles/FOSUserBundle/Registration/register_content.html.twig
@@ -1,4 +1,5 @@
 {% trans_default_domain 'FOSUserBundle' %}
+<h1>{{ 'registration.submit'|trans }}</h1>
 {{ form_start(form, {'method': 'post', 'action': path('fos_user_registration_register'), 'attr': {'class': 'fos_user_registration_register'}}) }}
     {{ form_widget(form) }}
 <div>
