renamed Organization to Brewery

--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -27,7 +27,7 @@
                     {#<a href="/equipment" class="{% if activeMenu == 'equipment' %} beeriously-nav-menu-active {% endif %}"><img src="/assets/img/fermentation-tank/fermentation-tank.svg"> Equipment<span><i class="fa fa-fw fa-chevron-right"></i></span></a>#}
                     <a href="{{ path('calculations') }}" class="{% if activeMenu == 'calculations' %} beeriously-nav-menu-active {% endif %}"><i class="fa fa-fw fa-calculator"></i> {{ 'beeriously.calculations.calculations'|trans }}<span><i class="fa fa-fw fa-chevron-right"></i></span></a>
                     {#<a href="/water" class="{% if activeMenu == 'water' %} beeriously-nav-menu-active {% endif %}"><i class="fa fa-fw fa-tint"></i> Water<span><i class="fa fa-fw fa-chevron-right"></i></span></a>#}
-                    {#<a href="/organization" class="{% if activeMenu == 'organization' %} beeriously-nav-menu-active {% endif %}"><i class="fa fa-fw fa-users"></i> Organization<span><i class="fa fa-fw fa-chevron-right"></i></span></a>#}
+                    {#<a href="/organization" class="{% if activeMenu == 'organization' %} beeriously-nav-menu-active {% endif %}"><i class="fa fa-fw fa-users"></i> Brewery<span><i class="fa fa-fw fa-chevron-right"></i></span></a>#}
                 </div>
                 <span class="beeriously-nav-menu-separator"></span>
                 <div id="beeriously-nav-menu-profile">
