--- a/templates/brewery/brewery.html.twig
+++ b/templates/brewery/brewery.html.twig
@@ -4,7 +4,85 @@
 
 {% block content %}
     <h1><i class="fa fa-users"></i> {{ pageTitle }}</h1>
+    <hr>
+        <div class="row">
+            <div class="col-md-2">
+                <div class="two-column-page-label">Name</div>
+            </div>
+            <div class="col-md-10">
+                <p class="two-column-page-single-value">
+                    {{ brewery.name }}
+                </p>
+                <div>
+                    <button type="button" class="btn btn-default btn-sm"><i class="fa fa-edit"></i> Change Brewery Name</button>
+                </div>
+            </div>
+        </div>
+    <hr>
+    <div class="row">
+        <div class="col-md-2">
+            <div class="two-column-page-label">Brewers</div>
+        </div>
+        <div class="col-md-10">
+            <table class="table table-bordered">
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Email</th>
+                        <th>&nbsp;</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for brewer in brewery.brewers %}
+                        <tr>
+                            <td>{{ brewer.fullName }}</td>
+                            <td>{{ brewer.email }}</td>
+                            <td>{% if brewer is same as(brewery.accountOwner) %}Owner{% endif %}</td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+            <div>
+                <button type="button" class="btn btn-default btn-sm"><i class="fa fa-plus"></i> Add a New Brewer</button>
+            </div>
+        </div>
+    </div>
+    <hr>
+    <div class="row">
+        <div class="col-md-2">
+            <div class="two-column-page-label">Measurement Preferences</div>
+        </div>
+        <div class="col-md-10">
+            <table class="table table-bordered">
+                <tbody>
+                <tr>
+                    <th>Weight and Volume</th>
+                    <td>U.S. Customary Units (e.g. Gallons, Pounds, etc.)</td>
+                    <td><button type="button" class="btn btn-default btn-sm"><i class="fa fa-edit"></i> Edit</button></td>
+                </tr>
+                <tr>
+                    <th>Density</th>
+                    <td>Specific Gravity (e.g. 1.040)</td>
+                    <td><button type="button" class="btn btn-default btn-sm"><i class="fa fa-edit"></i> Edit</button></td>
 
-    <p>{{ brewery.name }}</p>
+                </tr>
+                <tr>
+                    <th>Temperature</th>
+                    <td>Fahrenheit (°F)</td>
+                    <td><button type="button" class="btn btn-default btn-sm"><i class="fa fa-edit"></i> Edit</button></td>
+
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <hr>
+    <div class="row">
+        <div class="col-md-2">
+            <div class="two-column-page-label">Brewery History</div>
+        </div>
+        <div class="col-md-10">
+        </div>
+    </div>
 
 {% endblock %}
